# minimal-example

./: Cargo.toml
src/: main.rs  token_contract.rs
