[package]
name = "minimal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = { version = "0.3", features = ["alloc"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1.1"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[profile.dev]
split-debuginfo = "unpacked"